feat: Se añadió el módulo de egresos y se corrigieron los bugs de compilación.
- Se añadieron todos los archivos del módulo de egresos
- Se reescribieron y actualizaron archivos de Ingresos para implementar y/o actualizar métodos y entidades que ocasionaban errores de compilación